other-vpol/restrict-ingress-defaultbackend/.kyverno-test/resource.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sample-app-1
  namespace: default
spec:
  defaultBackend:
    service:
      name: sample-backend
      port:
        number: 80
  rules:
  - host: sample-frontend.example.com
    http:
      paths:
      - backend:
          service:
            name: sample-frontend
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - sample-frontend.example.com
    secretName: sample-frontend-tls
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sample-app-2
  namespace: default
spec:
  rules:
  - host: sample-backend.example.com
    http:
      paths:
      - backend:
          service:
            name: sample-backend
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
  - host: sample-frontend.example.com
    http:
      paths:
      - backend:
          service:
            name: sample-frontend
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - sample-backend.example.com
    secretName: sample-backend-tls
  - hosts:
    - sample-frontend.example.com
    secretName: sample-frontend-tls
